fixed pre tag wrapping issue

--- a/css/main.scss
+++ b/css/main.scss
@@ -60,6 +60,8 @@ pre, code {
     border-radius: 0px;
     background-color: #fff;
     font-family: .8em;
+    white-space: pre-wrap;
+ 	word-wrap: break-word;   
 }
 
 body {
